# MeiziSpider_test

./: README.md  items.py  meizituSpider.py  pipelines.py  settings.py
Documents/Data Stucture with C++/: CMakeLists.txt  main.cpp
Documents/Data Stucture with C++/BinTree/: BinNode.h  BinaryTree.h  binnode_implementation.h  binnode_inOrder.h  binnode_insert.h  binnode_macro.h  binnode_preOrder.h  binnode_succ.h  binnode_travInOrder_I1.h  binnode_travInOrder_i2.h  binnode_travInOrder_i3.h  binnode_travInOrder_r.h  binnode_travLevel.h  binnode_travPreOrder_i1.h  binnode_travPreOrder_r.h  bintree_breakTree.h  bintree_clean.h  bintree_copy.h  bintree_implementation.h  bintree_insert.h  bintree_isEmpty.h  bintree_makeTree.h  bintree_root.h  bintree_updateHeigh.h
Documents/Data Stucture with C++/PriorityQueue/: PQMin.h  PQMin_implementation.h
